fixed arrow spacing

--- a/src/ClientDisplay/components/MeetOurTeem/MeetOurTeemSlider.css
+++ b/src/ClientDisplay/components/MeetOurTeem/MeetOurTeemSlider.css
@@ -115,8 +115,13 @@
 }
 
 .slick-arrow::before {
-  background: red;
-  background: black;
+  /* background: red; */
+  position: relative;
+  top: 0.1rem;
+  /* display: flex; */
+  align-items: center;
+  justify-content: center;
+  /* background: black; */
 }
 
 .slick-prev {
